--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,13 @@ dependencies:
   flutter_barcode_scanner: ^1.0.1
   esc_pos_utils: ^1.0.0
 dev_dependencies:
+  flutter_launcher_icons: "^0.8.0"
   flutter_test:
     sdk: flutter
-
+flutter_icons:
+  android: "ic_launcher"
+  ios: true
+  image_path: "assets/icon/logo.jpeg"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
