--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   shared_preferences: ^0.5.12+4
   flutter_barcode_scanner: ^1.0.1
   esc_pos_utils: ^1.0.0
+  autocomplete_textfield: ^1.7.3
 dev_dependencies:
   flutter_launcher_icons: "^0.8.0"
   flutter_test:
